grammar/.antlr/st_grammarParser.java
// Generated from /home/lai/mini_plc/grammar/st_grammar.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class st_grammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		VAR=1, END_VAR=2, BOOL=3, INT=4, REAL=5, STRING=6, TIME=7, ARRAY=8, OF=9, 
		IF=10, THEN=11, END_IF=12, ELSIF=13, ELSE=14, FOR=15, TO=16, BY=17, DO=18, 
		END_FOR=19, WHILE=20, END_WHILE=21, RETURN=22, EXIT=23, AND=24, OR=25, 
		NOT=26, DB_NUMBER=27, DB_BIT=28, DB_BYTE=29, DB_WORD=30, DB_DWORD=31, 
		ABS_INPUT_BIT=32, ABS_INPUT_BYTE=33, ABS_INPUT_WORD=34, ABS_INPUT_DWORD=35, 
		ABS_OUTPUT_BIT=36, ABS_OUTPUT_BYTE=37, ABS_OUTPUT_WORD=38, ABS_OUTPUT_DWORD=39, 
		ABS_MEMORY_BIT=40, ABS_MEMORY_BYTE=41, ABS_MEMORY_WORD=42, ABS_MEMORY_DWORD=43, 
		BOOLEAN_LITERAL=44, INTEGER_LITERAL=45, REAL_LITERAL=46, STRING_LITERAL=47, 
		ASSIGN=48, EQ=49, NEQ=50, LT=51, LE=52, GT=53, GE=54, ADD=55, SUB=56, 
		MUL=57, DIV=58, LPAREN=59, RPAREN=60, SEMI=61, COMMA=62, LBRACK=63, RBRACK=64, 
		DOT=65, COLON=66, DOTDOT=67, ID=68, WS=69, COMMENT=70, LINE_COMMENT=71;
	public static final int
		RULE_program = 0, RULE_varBlock = 1, RULE_variableDeclaration = 2, RULE_typeSpec = 3, 
		RULE_elementaryType = 4, RULE_arrayType = 5, RULE_dimensionRange = 6, 
		RULE_statement = 7, RULE_ifStatement = 8, RULE_statementList = 9, RULE_forStatement = 10, 
		RULE_whileStatement = 11, RULE_assignment = 12, RULE_returnStatement = 13, 
		RULE_exitStatement = 14, RULE_argumentList = 15, RULE_argument = 16, RULE_expression = 17, 
		RULE_orExpression = 18, RULE_andExpression = 19, RULE_equalityExpression = 20, 
		RULE_relationalExpression = 21, RULE_additiveExpression = 22, RULE_multiplicativeExpression = 23, 
		RULE_unaryExpression = 24, RULE_primaryExpression = 25, RULE_literal = 26, 
		RULE_functionCall = 27, RULE_variable = 28, RULE_dbVariable = 29, RULE_dbArea = 30, 
		RULE_absoluteAddressBase = 31, RULE_bitSpecifier = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "varBlock", "variableDeclaration", "typeSpec", "elementaryType", 
			"arrayType", "dimensionRange", "statement", "ifStatement", "statementList", 
			"forStatement", "whileStatement", "assignment", "returnStatement", "exitStatement", 
			"argumentList", "argument", "expression", "orExpression", "andExpression", 
			"equalityExpression", "relationalExpression", "additiveExpression", "multiplicativeExpression", 
			"unaryExpression", "primaryExpression", "literal", "functionCall", "variable", 
			"dbVariable", "dbArea", "absoluteAddressBase", "bitSpecifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'VAR'", "'END_VAR'", "'BOOL'", "'INT'", "'REAL'", "'STRING'", 
			"'TIME'", "'ARRAY'", "'OF'", "'IF'", "'THEN'", "'END_IF'", "'ELSIF'", 
			"'ELSE'", "'FOR'", "'TO'", "'BY'", "'DO'", "'END_FOR'", "'WHILE'", "'END_WHILE'", 
			"'RETURN'", "'EXIT'", "'AND'", "'OR'", "'NOT'", null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "':='", "'='", "'<>'", "'<'", "'<='", "'>'", 
			"'>='", "'+'", "'-'", "'*'", "'/'", "'('", "')'", "';'", "','", "'['", 
			"']'", "'.'", "':'", "'..'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "VAR", "END_VAR", "BOOL", "INT", "REAL", "STRING", "TIME", "ARRAY", 
			"OF", "IF", "THEN", "END_IF", "ELSIF", "ELSE", "FOR", "TO", "BY", "DO", 
			"END_FOR", "WHILE", "END_WHILE", "RETURN", "EXIT", "AND", "OR", "NOT", 
			"DB_NUMBER", "DB_BIT", "DB_BYTE", "DB_WORD", "DB_DWORD", "ABS_INPUT_BIT", 
			"ABS_INPUT_BYTE", "ABS_INPUT_WORD", "ABS_INPUT_DWORD", "ABS_OUTPUT_BIT", 
			"ABS_OUTPUT_BYTE", "ABS_OUTPUT_WORD", "ABS_OUTPUT_DWORD", "ABS_MEMORY_BIT", 
			"ABS_MEMORY_BYTE", "ABS_MEMORY_WORD", "ABS_MEMORY_DWORD", "BOOLEAN_LITERAL", 
			"INTEGER_LITERAL", "REAL_LITERAL", "STRING_LITERAL", "ASSIGN", "EQ", 
			"NEQ", "LT", "LE", "GT", "GE", "ADD", "SUB", "MUL", "DIV", "LPAREN", 
			"RPAREN", "SEMI", "COMMA", "LBRACK", "RBRACK", "DOT", "COLON", "DOTDOT", 
			"ID", "WS", "COMMENT", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "st_grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public st_grammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(st_grammarParser.EOF, 0); }
		public VarBlockContext varBlock() {
			return getRuleContext(VarBlockContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(66);
				varBlock();
				}
			}

			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 10)) & ~0x3f) == 0 && ((1L << (_la - 10)) & 288230393327531041L) != 0)) {
				{
				{
				setState(69);
				statement();
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(75);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarBlockContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(st_grammarParser.VAR, 0); }
		public TerminalNode END_VAR() { return getToken(st_grammarParser.END_VAR, 0); }
		public List<VariableDeclarationContext> variableDeclaration() {
			return getRuleContexts(VariableDeclarationContext.class);
		}
		public VariableDeclarationContext variableDeclaration(int i) {
			return getRuleContext(VariableDeclarationContext.class,i);
		}
		public VarBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varBlock; }
	}

	public final VarBlockContext varBlock() throws RecognitionException {
		VarBlockContext _localctx = new VarBlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_varBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(VAR);
			setState(79); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(78);
				variableDeclaration();
				}
				}
				setState(81); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			setState(83);
			match(END_VAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableDeclarationContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(st_grammarParser.ID, 0); }
		public TerminalNode COLON() { return getToken(st_grammarParser.COLON, 0); }
		public TypeSpecContext typeSpec() {
			return getRuleContext(TypeSpecContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(st_grammarParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(st_grammarParser.SEMI, 0); }
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variableDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(ID);
			setState(86);
			match(COLON);
			setState(87);
			typeSpec();
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(88);
				match(ASSIGN);
				setState(89);
				expression();
				}
			}

			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMI) {
				{
				setState(92);
				match(SEMI);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeSpecContext extends ParserRuleContext {
		public ElementaryTypeContext elementaryType() {
			return getRuleContext(ElementaryTypeContext.class,0);
		}
		public ArrayTypeContext arrayType() {
			return getRuleContext(ArrayTypeContext.class,0);
		}
		public TypeSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeSpec; }
	}

	public final TypeSpecContext typeSpec() throws RecognitionException {
		TypeSpecContext _localctx = new TypeSpecContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typeSpec);
		try {
			setState(97);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOOL:
			case INT:
			case REAL:
			case STRING:
			case TIME:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				elementaryType();
				}
				break;
			case ARRAY:
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				arrayType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElementaryTypeContext extends ParserRuleContext {
		public TerminalNode BOOL() { return getToken(st_grammarParser.BOOL, 0); }
		public TerminalNode INT() { return getToken(st_grammarParser.INT, 0); }
		public TerminalNode REAL() { return getToken(st_grammarParser.REAL, 0); }
		public TerminalNode STRING() { return getToken(st_grammarParser.STRING, 0); }
		public TerminalNode TIME() { return getToken(st_grammarParser.TIME, 0); }
		public ElementaryTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elementaryType; }
	}

	public final ElementaryTypeContext elementaryType() throws RecognitionException {
		ElementaryTypeContext _localctx = new ElementaryTypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_elementaryType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 248L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArrayTypeContext extends ParserRuleContext {
		public TerminalNode ARRAY() { return getToken(st_grammarParser.ARRAY, 0); }
		public TerminalNode LBRACK() { return getToken(st_grammarParser.LBRACK, 0); }
		public List<DimensionRangeContext> dimensionRange() {
			return getRuleContexts(DimensionRangeContext.class);
		}
		public DimensionRangeContext dimensionRange(int i) {
			return getRuleContext(DimensionRangeContext.class,i);
		}
		public TerminalNode RBRACK() { return getToken(st_grammarParser.RBRACK, 0); }
		public TerminalNode OF() { return getToken(st_grammarParser.OF, 0); }
		public ElementaryTypeContext elementaryType() {
			return getRuleContext(ElementaryTypeContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(st_grammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(st_grammarParser.COMMA, i);
		}
		public ArrayTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayType; }
	}

	public final ArrayTypeContext arrayType() throws RecognitionException {
		ArrayTypeContext _localctx = new ArrayTypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arrayType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(ARRAY);
			setState(102);
			match(LBRACK);
			setState(103);
			dimensionRange();
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(104);
				match(COMMA);
				setState(105);
				dimensionRange();
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(111);
			match(RBRACK);
			setState(112);
			match(OF);
			setState(113);
			elementaryType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DimensionRangeContext extends ParserRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode DOTDOT() { return getToken(st_grammarParser.DOTDOT, 0); }
		public DimensionRangeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dimensionRange; }
	}

	public final DimensionRangeContext dimensionRange() throws RecognitionException {
		DimensionRangeContext _localctx = new DimensionRangeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_dimensionRange);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			expression();
			setState(116);
			match(DOTDOT);
			setState(117);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public ExitStatementContext exitStatement() {
			return getRuleContext(ExitStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_statement);
		try {
			setState(126);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(119);
				ifStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(120);
				forStatement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(121);
				whileStatement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(122);
				assignment();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(123);
				functionCall();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(124);
				returnStatement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(125);
				exitStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfStatementContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(st_grammarParser.IF, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> THEN() { return getTokens(st_grammarParser.THEN); }
		public TerminalNode THEN(int i) {
			return getToken(st_grammarParser.THEN, i);
		}
		public List<StatementListContext> statementList() {
			return getRuleContexts(StatementListContext.class);
		}
		public StatementListContext statementList(int i) {
			return getRuleContext(StatementListContext.class,i);
		}
		public TerminalNode END_IF() { return getToken(st_grammarParser.END_IF, 0); }
		public List<TerminalNode> ELSIF() { return getTokens(st_grammarParser.ELSIF); }
		public TerminalNode ELSIF(int i) {
			return getToken(st_grammarParser.ELSIF, i);
		}
		public TerminalNode ELSE() { return getToken(st_grammarParser.ELSE, 0); }
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ifStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(IF);
			setState(129);
			expression();
			setState(130);
			match(THEN);
			setState(131);
			statementList();
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ELSIF) {
				{
				{
				setState(132);
				match(ELSIF);
				setState(133);
				expression();
				setState(134);
				match(THEN);
				setState(135);
				statementList();
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(142);
				match(ELSE);
				setState(143);
				statementList();
				}
			}

			setState(146);
			match(END_IF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementListContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementList; }
	}

	public final StatementListContext statementList() throws RecognitionException {
		StatementListContext _localctx = new StatementListContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_statementList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 10)) & ~0x3f) == 0 && ((1L << (_la - 10)) & 288230393327531041L) != 0)) {
				{
				{
				setState(148);
				statement();
				}
				}
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ForStatementContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(st_grammarParser.FOR, 0); }
		public TerminalNode ID() { return getToken(st_grammarParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(st_grammarParser.ASSIGN, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode TO() { return getToken(st_grammarParser.TO, 0); }
		public TerminalNode DO() { return getToken(st_grammarParser.DO, 0); }
		public TerminalNode END_FOR() { return getToken(st_grammarParser.END_FOR, 0); }
		public TerminalNode BY() { return getToken(st_grammarParser.BY, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ForStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forStatement; }
	}

	public final ForStatementContext forStatement() throws RecognitionException {
		ForStatementContext _localctx = new ForStatementContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_forStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(FOR);
			setState(155);
			match(ID);
			setState(156);
			match(ASSIGN);
			setState(157);
			expression();
			setState(158);
			match(TO);
			setState(159);
			expression();
			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==BY) {
				{
				setState(160);
				match(BY);
				setState(161);
				expression();
				}
			}

			setState(164);
			match(DO);
			setState(168);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 10)) & ~0x3f) == 0 && ((1L << (_la - 10)) & 288230393327531041L) != 0)) {
				{
				{
				setState(165);
				statement();
				}
				}
				setState(170);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(171);
			match(END_FOR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WhileStatementContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(st_grammarParser.WHILE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode DO() { return getToken(st_grammarParser.DO, 0); }
		public TerminalNode END_WHILE() { return getToken(st_grammarParser.END_WHILE, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public WhileStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileStatement; }
	}
